syntax = "proto3";

option go_package = "github.com/althk/ganache/cfe/proto";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

package cfe.proto;

service CFE {
	rpc Get(GetRequest) returns (GetResponse) {}
	rpc Set(SetRequest) returns (google.protobuf.Empty) {}
}

message GetRequest {
	string namespace = 1;
	string key = 2;
}

message GetResponse {
	google.protobuf.Any data = 1;
}

message SetRequest {
	string namespace = 1;
	string key = 2;
	google.protobuf.Any data = 3;
}